tests/if_else/faulty_no_else_elif.sy
f :: fn a ->
    if a == 1 do
        "a"
    elif a == 2 do
        "b"
    end
end

start :: fn do
end

// error: type isn't explicitly set to `void`
